--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <li class="nav-item">
                     <a href="#about" class="nav-link">About</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a href="#menu" class="nav-link">Menu</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a href="#testimonial" class="nav-link">Testimonal</a>
                 </li>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-    <section class="menu-section" id="menu">
+    <!-- <section class="menu-section" id="menu">
         <h2 class="section-title">Our Menu</h2>
         <div class="section-content">
             <ul class="menu-list">
@@ -113,7 +113,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> -->
     <section class="testimonials-section" id="testimonial">
         <h2 class="section-title">Testimonials</h2>
             <div class="section-content">
