--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <li class="nav-item">
                     <a href="#about" class="nav-link">About</a>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a href="#menu" class="nav-link">Menu</a>
-                </li> -->
+                </li>
                 <li class="nav-item">
                     <a href="#testimonial" class="nav-link">Testimonal</a>
                 </li>
@@ -77,43 +77,43 @@
                 </div>
             </div>
         </section>
-    <!-- <section class="menu-section" id="menu">
+    <section class="menu-section" id="menu">
         <h2 class="section-title">Our Menu</h2>
         <div class="section-content">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <img src="images/hot-beverages.png" alt="Hot Beverages" class="menu-image">
+                    <img src="Images/hot-beverages.png" alt="Hot Beverages" class="menu-image">
                     <h3 class="name">Hot Beverages</h3>
                     <p class="text">Wide range of steaming hot coffee to make you fresh and light.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="images/cold-beverages.png" alt="Cold Beverages" class="menu-image">
+                    <img src="Images/cold-beverages.png" alt="Cold Beverages" class="menu-image">
                     <h3 class="name">Cold Beverages</h3>
                     <p class="text">Creamy and Frothy cold coffee to make you cool.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="images/refreshment.png" alt="Refreshment" class="menu-image">
+                    <img src="Images/refreshment.png" alt="Refreshment" class="menu-image">
                     <h3 class="name">Refreshment</h3>
                     <p class="text">Fruit and icy refreshing drink to make feel fresh.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="images/special-combo.png" alt="Special Combo" class="menu-image">
+                    <img src="Images/special-combo.png" alt="Special Combo" class="menu-image">
                     <h3 class="name">Special Combo</h3>
                     <p class="text">Your favourite eating and drinking combinations.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="images/desserts.png" alt="Dssert" class="menu-image">
+                    <img src="Images/desserts.png" alt="Dessert" class="menu-image">
                     <h3 class="name">Dessert</h3>
                     <p class="text">Satisfy your palate and take you on a culinary treat.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="images/burger-frenchfries.png" alt="Burger and French Fries" class="menu-image">
+                    <img src="Images/burger-frenchfries.png" alt="Burger and French Fries" class="menu-image">
                     <h3 class="name">Burger and French Fries</h3>
                     <p class="text">Quick bites to satisfy your small size hunger.</p>
                 </li>
             </ul>
         </div>
-    </section> -->
+    </section>
     <section class="testimonials-section" id="testimonial">
         <h2 class="section-title">Testimonials</h2>
             <div class="section-content">
