--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <p class="description">Welcome to our coffee paradise,where every bean tells a story and every cup speaks joy.</p>
 
                     <div class="buttons">
-                        <a href="#" class="button order-now">Order Now</a>
-                        <a href="#" class="button contact-us">Contact Us</a>
+                        <a href="#menu" class="button order-now">Order Now</a>
+                        <a href="#contact" class="button contact-us">Contact Us</a>
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
@@ -82,27 +82,27 @@
         <div class="section-content">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <img src="Images/hot-beverages.png" alt="Hot Beverages" class="menu-image">
+                    <img src="Images/hot-beverages.png" alt="Hot Beverages" class="menu-image" loading="lazy">
                     <h3 class="name">Hot Beverages</h3>
                     <p class="text">Wide range of steaming hot coffee to make you fresh and light.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="Images/cold-beverages.png" alt="Cold Beverages" class="menu-image">
+                    <img src="Images/cold-beverages.png" alt="Cold Beverages" class="menu-image" loading="lazy">
                     <h3 class="name">Cold Beverages</h3>
                     <p class="text">Creamy and Frothy cold coffee to make you cool.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="Images/refreshment.png" alt="Refreshment" class="menu-image">
+                    <img src="Images/refreshment.png" alt="Refreshment" class="menu-image" loading="lazy">
                     <h3 class="name">Refreshment</h3>
                     <p class="text">Fruit and icy refreshing drink to make feel fresh.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="Images/special-combo.png" alt="Special Combo" class="menu-image">
+                    <img src="Images/special-combo.png" alt="Special Combo" class="menu-image" loading="lazy">
                     <h3 class="name">Special Combo</h3>
                     <p class="text">Your favourite eating and drinking combinations.</p>
                 </li>
                 <li class="menu-item">
-                    <img src="Images/desserts.png" alt="Dessert" class="menu-image">
+                    <img src="Images/desserts.png" alt="Dessert" class="menu-image" loading="lazy">
                     <h3 class="name">Dessert</h3>
                     <p class="text">Satisfy your palate and take you on a culinary treat.</p>
                 </li>
